--- a/pages/courseOrder/courseOrder.wxss
+++ b/pages/courseOrder/courseOrder.wxss
@@ -67,3 +67,93 @@ page {
   align-items: center;
   font-size: larger;
 }
+/* ---------------------------- */
+/*模态框*/
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+}
+.modal-cancel {
+  position: absolute;
+  z-index: 2000;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+}
+.bottom-dialog-body {
+  width: 100%;
+  position: absolute;
+  z-index: 3000;
+  bottom: 0;
+  left: 0;
+  background: #dfdede;
+}
+.bottom-dialog-body .Mcancel {
+  width: 100%;
+}
+.bottom-dialog-body .Mcancel .model-order {
+  color: var(--themeColor);
+  font-size: medium;
+  margin-left: 20rpx;
+  margin-top: 20rpx;
+}
+.bottom-dialog-body .Mcancel form {
+  margin-top: 20rpx;
+}
+.bottom-dialog-body .Mcancel form .weui-cell__bd {
+  margin-left: 20rpx;
+  margin-right: 20rpx;
+  margin-top: 30rpx;
+}
+.bottom-dialog-body .Mcancel form .weui-cell__bd input {
+  border: 1px solid #A9A9A9;
+  border-radius: 10rpx;
+  min-height: 60rpx;
+  height: 60rpx;
+}
+.bottom-dialog-body .Mcancel .mdoel-tips {
+  margin-left: 20rpx;
+  margin-top: 50rpx;
+  margin-bottom: 30rpx;
+  color: #808080;
+}
+.bottom-dialog-body .Mcancel .btn-area .btn-confirm {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.bottom-dialog-body .Mcancel .btn-area .btn-confirm button {
+  width: 95%;
+  border-radius: 50rpx;
+  color: white;
+  background-color: var(--themeColor);
+}
+/*动画前初始位置*/
+.bottom-positon {
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+}
+/* 底部弹出框 */
+/* .bottom-positon{
+  text-align: center;
+}
+.Mselect{
+  margin-bottom: 20rpx;
+}
+.Mselect view{
+  padding: 26rpx 0;
+  background: #fff;
+}
+.Mselect view:not(:last-of-type){
+  border-bottom: 1px solid #dfdede;
+}
+.Mcancel{
+  background: #fff;
+  padding: 26rpx 0;
+} */
