--- a/pages/contact/contact.wxss
+++ b/pages/contact/contact.wxss
@@ -1,1 +1,27 @@
-/* pages/contact/contact.wxss */
+.contact_tap_floating {
+  margin-left: 20rpx;
+  margin-right: 20rpx;
+  margin-top: 20rpx;
+  background-color: white;
+  margin-bottom: 50rpx;
+  border-radius: 10rpx;
+}
+.contact_tap_floating .map_details .add_name {
+  font-size: medium;
+  font-weight: 800;
+  padding-top: 30rpx;
+  padding-bottom: 20rpx;
+  padding-left: 20rpx;
+}
+.contact_tap_floating .map_details .add_details {
+  font-size: smaller;
+  color: #77828d;
+  padding-bottom: 20rpx;
+  padding-left: 20rpx;
+}
+.contact_tap_floating .map_details .phone {
+  font-size: smaller;
+  color: #77828d;
+  padding-bottom: 20rpx;
+  padding-left: 20rpx;
+}
