--- a/pages/tiyancourse/tiyancourse.wxml
+++ b/pages/tiyancourse/tiyancourse.wxml
@@ -1,2 +1,4 @@
 <!--pages/tiyancourse/tiyancourse.wxml-->
-<text>pages/tiyancourse/tiyancourse.wxml</text>
+<view class="comingsoon">
+    <image mode="widthFix" src="https://pic.downk.cc/item/5eeae79e14195aa594085a2f.jpg" />
+</view>
