--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -88,16 +88,19 @@ swiper{
     .activity_tap_floating{
         display: flex;
         height: 180rpx;
-        background-color: white;
+        
         margin-left: 20rpx;
         margin-right: 20rpx;
+        padding-bottom: 20rpx;
         border-radius: 10rpx;
         .activity_img{
             flex: 2;
             height: 100%;
-            border-radius: 10rpx;
+            border-top-left-radius: 10rpx;
+            border-bottom-left-radius: 10rpx;
         }
         .actyvity_title{
+            background-color: white;
             flex: 3;
             .activity_title_detail{
                 font-size: 12;
@@ -110,6 +113,7 @@ swiper{
                 margin-left: 15rpx;
                 button{
                     flex: 1;
+                    border-radius: 50rpx;
                 }
                 .activity_date{
                     flex: 2;
