--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -65,7 +65,7 @@
   </view>
   <scroll-view class="school_imgs" scroll-x="true" >
     <block wx:for="{{albumSrc}}">
-      <image mode="scaleToFill" src="{{item.src}}" />
+      <image mode="scaleToFill" data-src="{{item.src}}" src="{{item.src}}" bindtap="topic_preview" />
     </block>
   </scroll-view>
 </view>
@@ -76,16 +76,18 @@
     <view class="title">资讯活动</view>
     <view class="index_more" bindtap="toActivityMore">更多 ></view>
   </view>
-  <view class="activity_tap_floating">
-    <image class="activity_img" mode="scaleToFill" src="https://pic.downk.cc/item/5eda0c4ac2a9a83be533f3ea.jpg" />
-    <view class="actyvity_title">
-      <view class="activity_title_detail">语匠社暑期户外活动</view>
-      <view class="activity_tap">
-        <button class="mini-btn" type="default" size="mini" style="height:40rpx;font-size:25rpx;color:#77828d;text-align:center;line-height:40rpx;" >户外活动</button>
-        <text class="activity_date">2020-06-01</text>
-      </view>
+  <block wx:for="{{activity}}" wx:for-item="item" wx:for-index="index" wx:key="*this" >
+    <view class="activity_tap_floating">
+        <image class="activity_img" mode="scaleToFill" src="{{item.src}}" />
+        <view class="actyvity_title">
+          <view class="activity_title_detail">{{item.title}}</view>
+          <view class="activity_tap">
+            <button class="mini-btn" type="default" size="mini" style="height:40rpx;font-size:25rpx;color:#77828d;text-align:center;line-height:40rpx;" >户外活动</button>
+            <text class="activity_date">{{item.date}}</text>
+          </view>
+        </view>
     </view>
-  </view>
+  </block>
 </view>
 <!--联系方式导航-->
 <view class="index_title">
@@ -97,7 +99,7 @@
     <view class="contact_map">
       <map longitude="{{longitude}}" latitude="{{latitude}}" markers="{{markers}}" show-location="true" scale="14" style="width:100%;height:300rpx" />
     </view>
-    <view class="map_details">
+    <view class="map_details" bindtap="toContactMore">
       <view class="add_name">茶店子</view>
       <view class="add_details">茶店子路龙湖紫宸香颂4期3栋3单元710</view>
       <view class="phone">电话：4000303096</view>
