--- a/pages/student/student.wxss
+++ b/pages/student/student.wxss
@@ -1,1 +1,7 @@
-/* pages/student/student.wxss */
+.comingsoon {
+  margin: 20rpx;
+}
+.comingsoon image {
+  width: 100%;
+  border-radius: 10rpx;
+}
