--- a/pages/contact/contact.less
+++ b/pages/contact/contact.less
@@ -26,4 +26,36 @@
             padding-left: 20rpx;
         }
     }
+    .map_func{
+        display: flex;
+        justify-content: center;
+        background-color: #DCDCDC;
+        height: 60rpx;
+        .map{
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-right: 1rpx solid;
+            border-color: white;
+            font-weight: 800;
+            image{
+                width: 10%;
+                margin-right: 10rpx;
+            }
+        }
+        .call{
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-left: 1rpx solid;
+            border-color: white;
+            font-weight: 800;
+            image{
+                width: 10%;
+                margin-right: 10rpx;
+            }
+        }
+    }
 }
