--- a/pages/contact/contact.wxss
+++ b/pages/contact/contact.wxss
@@ -25,3 +25,35 @@
   padding-bottom: 20rpx;
   padding-left: 20rpx;
 }
+.contact_tap_floating .map_func {
+  display: flex;
+  justify-content: center;
+  background-color: #DCDCDC;
+  height: 60rpx;
+}
+.contact_tap_floating .map_func .map {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1rpx solid;
+  border-color: white;
+  font-weight: 800;
+}
+.contact_tap_floating .map_func .map image {
+  width: 10%;
+  margin-right: 10rpx;
+}
+.contact_tap_floating .map_func .call {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-left: 1rpx solid;
+  border-color: white;
+  font-weight: 800;
+}
+.contact_tap_floating .map_func .call image {
+  width: 10%;
+  margin-right: 10rpx;
+}
