个人中心框架，联系我们增加客服会话功能

--- a/pages/contact/contact.less
+++ b/pages/contact/contact.less
@@ -57,5 +57,35 @@
                 margin-right: 10rpx;
             }
         }
+        .online{
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-left: 1rpx solid;
+            border-color: white;
+            image{
+                width: 10%;
+                margin-right: 10rpx;
+            }
+            button{
+                background-color:#DCDCDC; //可根据自己的背景颜色自行设置
+                border-radius: 0rpx;
+                padding:0rpx;
+                margin:0rpx;
+                display: inline-block;
+                line-height: 1;
+                width: 48%;
+                font-weight: 800;
+                font-size: 28rpx;
+            }
+            button::after{ /*button的边框样式是通过::after方式实现的*/
+                border:none;
+            }
+            .button-hover{ /*点击后样式*/
+                color:#000;
+                background-color: #DCDCDC;
+            }
+        }
     }
 }
