新增个人中心预定详情组件，预定详情页面（剩余一些数据细节未解决）

--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -9,10 +9,10 @@
   </view>
 </view>
 <view class="orderinfo">
-  <view class="orderCourse">
+  <view class="orderCourse" bindtap="toOrderedCourse">
     <image mode="widthFix" src="../../icon/mine/orderCourse.png" />
   </view>
-  <view class="orderExperienceCourse">
+  <view class="orderExperienceCourse" bindtap="toOrderedExperenceCourse">
     <image mode="widthFix" src="../../icon/mine/orderExperienceCourse.png" />
   </view>
 </view>
